--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ function preload() {
 
 }
 
+var player;
 var platforms;
+var cursors;
 
 function create() {
 
@@ -52,18 +54,68 @@ function create() {
 
     //  Now let's create two ledges
     var ledge = platforms.create(400, 400, 'ground');
-
     ledge.body.immovable = true;
 
     ledge = platforms.create(-150, 250, 'ground');
-
     ledge.body.immovable = true;
+
+    // The player and its settings
+    player = game.add.sprite(32, game.world.height - 150, 'rick');
+
+    //  We need to enable physics on the player
+    game.physics.arcade.enable(player);
+
+    //  Player physics properties. Give the little guy a slight bounce.
+    player.body.bounce.y = 0.2;
+    player.body.gravity.y = 300;
+    player.body.collideWorldBounds = true;
+
+    //  Our two animations, walking left and right.
+    player.animations.add('left', [0, 1], 5, true);
+	player.animations.add('right', [4, 5], 5, true);
+
+    //  Our controls.
+    cursors = game.input.keyboard.createCursorKeys();
     
 }
 
 function update() {
-}
 
+    //  Collide the player and the mice with the platforms
+    game.physics.arcade.collide(player, platforms);
+
+    //  Reset the players velocity (movement)
+    player.body.velocity.x = 0;
+
+    if (cursors.left.isDown)
+    {
+        //  Move to the left
+        player.body.velocity.x = -150;
+
+        player.animations.play('left');
+    }
+    else if (cursors.right.isDown)
+    {
+        //  Move to the right
+        player.body.velocity.x = 150;
+
+        player.animations.play('right');
+    }
+    else
+    {
+        //  Stand still
+        player.animations.stop();
+
+        player.frame = 4;
+    }
+    
+    //  Allow the player to jump if they are touching the ground.
+    if (cursors.up.isDown && player.body.touching.down)
+    {
+        player.body.velocity.y = -350;
+    }
+
+}
 </script>
 
 </body>
