--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ function update() {
     //  Allow the player to jump if they are touching the ground.
     if (cursors.up.isDown && player.body.touching.down)
     {
-        player.body.velocity.y = -351;
+        player.body.velocity.y = -350;
     }
 
 }
@@ -157,6 +157,44 @@ function collectMouse (player, mouse) {
     scoreText.text = 'Score: ' + score;
 
 }
+
+var qCounter=0; 
+function quake() 
+{ 
+  // the horizontal displacement 
+  var deltaX=1; 
+  // make sure the browser support the moveBy method 
+  if (window.moveBy) 
+  { 
+    for (qCounter=0; qCounter<qDuration; qCounter++) 
+    { 
+      // shake left 
+      if ((qCounter%4)==0) 
+      { 
+        window.moveBy(deltaX, 0); 
+      } 
+      // shake right 
+      else if ((qCounter%4)==2) 
+      { 
+        window.moveBy(-deltaX, 0); 
+      } 
+      // speed up or slow down every X cycles 
+      if ((qCounter%30)==0) 
+      { 
+        // speed up halfway 
+        if (qCounter<qDuration/2) 
+        { 
+          deltaX++; 
+        } 
+        // slow down after halfway of the duration 
+        else 
+        { 
+          deltaX--; 
+        } 
+      } 
+    } 
+	} 
+} 
 
 </script>
 
