--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@ function update() {
     {
         player.body.velocity.y = -350;
     }
+    if (cursors.down.isDown) {
+    	quake();
+    }
 
 }
 
